# docuscope-cac

./: .gitignore  README.md  app.py  pyoxidizer.bzl  pyproject.toml  requirements-deploy.txt
.streamlit/: config.toml
js/app/: package.json
js/app/icons/: icon.icns
js/app/src/: main.ts
lib/docuscope/: __init__.py  __main__.py  _app.py  _config.py  _gui.py  _root.py  _version.py
lib/docuscope/_dev/: paths.py  propagate.py  tests.py
lib/docuscope/_imports/: __init__.py  imports.py
lib/docuscope/_imports/slow/: __init__.py
lib/docuscope/_streamlit/: categories.py  config.toml  index.py  options.toml  states.py
lib/docuscope/_streamlit/_corpora/ld/D_MICUSP_by_paper/: dtm_ds.parquet  dtm_pos.parquet  ft_ds.parquet  ft_pos.parquet  tt_ds.parquet  tt_pos.parquet
lib/docuscope/_streamlit/_temp/: session.pkl
lib/docuscope/_streamlit/apps/: __init__.py  advanced_plotting.py  collocations.py  compare_corpora.py  compare_corpus_parts.py  download_tagged_files.py  getting_started.py  kwic.py  load_corpus.py  ngrams.py  single_document.py  tag_frequencies.py  tagsets.py  tagsets_toggling.py  token_frequencies.py
lib/docuscope/_streamlit/css/: style.css
lib/docuscope/_streamlit/models/en_docusco_spacy/: config.cfg  meta.json
lib/docuscope/_streamlit/models/en_docusco_spacy/ner/: model  moves
lib/docuscope/_streamlit/models/en_docusco_spacy/tagger/: cfg  model
lib/docuscope/_streamlit/models/en_docusco_spacy_cd/: config.cfg  meta.json
lib/docuscope/_streamlit/models/en_docusco_spacy_cd/ner/: model  moves
lib/docuscope/_streamlit/models/en_docusco_spacy_cd/tagger/: cfg  model
lib/docuscope/_streamlit/models/en_docusco_spacy_fc/: config.cfg  meta.json
lib/docuscope/_streamlit/models/en_docusco_spacy_fc/ner/: model  moves
lib/docuscope/_streamlit/models/en_docusco_spacy_fc/tagger/: cfg  model
lib/docuscope/_streamlit/models/en_docusco_spacy_fc/vocab/: strings.json
lib/docuscope/_streamlit/server/: downloads.py  patches.py  rerun.py  session.py  start.py
lib/docuscope/_streamlit/utilities/: __init__.py  analysis_functions.py  config.py  content.py  content_desktop.py  content_online.py  handlers_database.py  handlers_imports.py  handlers_local.py  handlers_server.py  messages.py  misc.py  process_corpus.py  process_corpus_detect.py  process_corpus_nodetect.py  warnings.py
lib/docuscope/_utilities/: config.py  createshells.py  filesystem.py  test.py
lib/docuscope/_utilities/filehash/: __init__.py  core.py
lib/docuscope/_vendor/: deprecated.py  patchlogging.py
lib/docuscope/_vendor/apipkg/: __init__.py
lib/docuscope/cli/: __init__.py  dev.py  gui.py  streamlit.py
lib/docuscope/tests/e2e/: test_cypress.py  utilities.py
lib/docuscope/tests/e2e/cypress/support/: commands.js
lib/docuscope/tests/logfiles/: test_filelogic.py
lib/docuscope/tests/logging/: test_logging_setting.py
lib/docuscope/tests/utilities/: test_patient.py
